Фикс сервисных тестов